--- a/.gitignore
+++ b/.gitignore
@@ -59,11 +59,12 @@ sysinfo.txt
 crashlytics-build.properties
 
 LDJam46/Library/
-LDJam46//[Ll]ibrary/
-LDJam46//[Tt]emp/
-LDJam46//[Oo]bj/
-LDJam46//[Bb]uild/
-LDJam46//[Bb]uilds/
-LDJam46//[Ll]ogs/
-LDJam46//[Mm]emoryCaptures/
+LDJam46/[Ll]ibrary/
+LDJam46/Temp/
+LDJam46/[Oo]bj/
+LDJam46/[Bb]uild/
+LDJam46/[Bb]uilds/
+LDJam46/[Ll]ogs/
+LDJam46/[Mm]emoryCaptures/
 LDJam46/.vs/
+LDJam46/Build/
